--- a/sgo/web/WEB-INF/_repositorio/sgo/report_producaoativa.jrxml
+++ b/sgo/web/WEB-INF/_repositorio/sgo/report_producaoativa.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report_aprovados" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="nomeEquipe" class="java.lang.String">
@@ -12,6 +12,7 @@
 	 USUARIO.apelido as usuario,
 	 SUM(CONTRATO.valormeta) as metaCount,
 	 SUM(CONTRATO.valorcontrato) as contratoCount,
+	 SUM(CONTRATO.valorliquido) as liquidoCount,
 	 SUM(CONTRATO.valorContratoLiquido) as contLiquidoCount
  FROM ((( CONTRATO
  INNER JOIN ETAPA ON CONTRATO.etapa_id = ETAPA.etapa_id)
@@ -26,6 +27,7 @@
 	<field name="usuario" class="java.lang.String"/>
 	<field name="metaCount" class="java.lang.Double"/>
 	<field name="contratoCount" class="java.lang.Double"/>
+	<field name="liquidoCount" class="java.lang.Double"/>
 	<field name="contLiquidoCount" class="java.lang.Double"/>
 	<variable name="metaCount_1" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{metaCount}]]></variableExpression>
@@ -35,6 +37,9 @@
 	</variable>
 	<variable name="contLiquidoCount_1" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{contLiquidoCount}]]></variableExpression>
+	</variable>
+	<variable name="contLiquido" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{liquidoCount}]]></variableExpression>
 	</variable>
 	<background>
 		<band/>
@@ -59,6 +64,7 @@
 				</textField>
 				<textField>
 					<reportElement x="34" y="20" width="231" height="43" forecolor="#FFFFFF"/>
+					<box topPadding="5" leftPadding="5"/>
 					<textElement>
 						<font size="30"/>
 					</textElement>
@@ -75,66 +81,90 @@
 			<staticText>
 				<reportElement mode="Opaque" x="2" y="2" width="118" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="14" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Consultor]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="119" y="2" width="126" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
+				<reportElement mode="Opaque" x="406" y="2" width="95" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="14" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Vl Meta]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="245" y="2" width="106" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
+				<reportElement mode="Opaque" x="120" y="2" width="95" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="14" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Vl Contrato]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="349" y="2" width="119" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
+				<reportElement mode="Opaque" x="216" y="2" width="98" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="14" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Vl C. Liquido]]></text>
+				<text><![CDATA[Vl Liquido]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="468" y="2" width="87" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
+				<reportElement mode="Opaque" x="502" y="2" width="53" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="14" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[%]]></text>
+			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="314" y="2" width="92" height="19" forecolor="#006699" backcolor="#E6E6E6"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="12" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Vl C. Liquido]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="22">
 			<textField pattern="¤ #,##0.00">
-				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="122" y="1" width="126" height="20" backcolor="#CCCCCC"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="406" y="1" width="95" height="20" backcolor="#CCCCCC"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{metaCount}]]></textFieldExpression>
 			</textField>
 			<textField pattern="¤ #,##0.00">
-				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="246" y="1" width="104" height="20" backcolor="#CCCCCC"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{contratoCount}]]></textFieldExpression>
-			</textField>
-			<textField pattern="¤ #,##0.00">
-				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="349" y="1" width="119" height="20" backcolor="#CCCCCC"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{contLiquidoCount}]]></textFieldExpression>
+				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="216" y="1" width="98" height="20" backcolor="#CCCCCC"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{liquidoCount}]]></textFieldExpression>
 			</textField>
 			<textField pattern="">
 				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="2" y="1" width="120" height="20" backcolor="#CCCCCC"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{usuario}]]></textFieldExpression>
 			</textField>
-			<textField evaluationTime="Auto" pattern="#,##0.00 %" isBlankWhenNull="false">
-				<reportElement mode="Opaque" x="468" y="1" width="87" height="20" backcolor="#CCCCCC"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+			<textField evaluationTime="Auto" pattern="#,##0.00 %" isBlankWhenNull="true">
+				<reportElement mode="Opaque" x="502" y="1" width="53" height="20" backcolor="#CCCCCC"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new Double($F{metaCount}/$V{metaCount_1})]]></textFieldExpression>
+			</textField>
+			<textField pattern="¤ #,##0.00">
+				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="121" y="1" width="95" height="20" backcolor="#CCCCCC"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{contratoCount}]]></textFieldExpression>
+			</textField>
+			<textField pattern="¤ #,##0.00">
+				<reportElement positionType="FixRelativeToBottom" mode="Opaque" x="314" y="1" width="92" height="20" backcolor="#CCCCCC"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{contLiquidoCount}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -145,17 +175,23 @@
 		<band height="18">
 			<textField>
 				<reportElement mode="Opaque" x="0" y="4" width="515" height="13" backcolor="#E6E6E6"/>
-				<textElement textAlignment="Right"/>
+				<textElement textAlignment="Right">
+					<font size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement mode="Opaque" x="515" y="4" width="40" height="13" backcolor="#E6E6E6"/>
-				<textElement/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField pattern="EEEEE dd MMMMM yyyy">
 				<reportElement x="0" y="4" width="187" height="13"/>
-				<textElement/>
+				<textElement>
+					<font size="9"/>
+				</textElement>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 		</band>
@@ -163,27 +199,42 @@
 	<summary>
 		<band height="22">
 			<textField pattern="¤ #,##0.00">
-				<reportElement mode="Opaque" x="122" y="0" width="126" height="20" backcolor="#666666"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{metaCount_1}]]></textFieldExpression>
-			</textField>
-			<textField pattern="¤ #,##0.00">
-				<reportElement mode="Opaque" x="246" y="0" width="104" height="20" backcolor="#666666"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<reportElement mode="Opaque" x="122" y="0" width="95" height="20" backcolor="#666666"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$V{contratoCount_1}]]></textFieldExpression>
 			</textField>
 			<textField pattern="¤ #,##0.00">
-				<reportElement mode="Opaque" x="350" y="0" width="119" height="20" backcolor="#666666"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<reportElement mode="Opaque" x="216" y="0" width="98" height="20" backcolor="#666666"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{contLiquido}]]></textFieldExpression>
+			</textField>
+			<textField pattern="¤ #,##0.00">
+				<reportElement mode="Opaque" x="314" y="0" width="92" height="20" backcolor="#666666"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$V{contLiquidoCount_1}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement mode="Opaque" x="2" y="0" width="120" height="20" backcolor="#666666"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
 				<text><![CDATA[TOTAL:]]></text>
 			</staticText>
 			<textField pattern="¤ #,##0.00">
-				<reportElement mode="Opaque" x="469" y="0" width="86" height="20" backcolor="#666666"/>
+				<reportElement mode="Opaque" x="406" y="0" width="95" height="20" backcolor="#666666"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{metaCount_1}]]></textFieldExpression>
+			</textField>
+			<textField pattern="¤ #,##0.00" isBlankWhenNull="true">
+				<reportElement mode="Opaque" x="492" y="0" width="63" height="20" backcolor="#666666"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 			</textField>
 		</band>
