--- a/trunk/sgo/web/header.jspf
+++ b/trunk/sgo/web/header.jspf
@@ -414,6 +414,14 @@
 				<c:if test="${usuarioInfo.perfil.chave == 'Administrativo' && usuarioInfo.organizacao.nome == 'OUROCRED RIBEIRAO' }">
 
 					<li class="submenu">
+						<a href="#"><i class="icon icon-pencil"></i> <span>Administrativo</span></a>
+						<ul class="cadastro">
+							<li><a href="<c:url value="/coeficiente/cadastro"/>">Coeficiente</a></li>
+						</ul>
+					</li>
+					
+					
+					<li class="submenu">
 
 						<a href="#"><i class="icon icon-search"></i> <span>Consultas</span></a>
 
